# codypy

./: .env.example  .gitignore  README.md  cli.py  env.example  main.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
codypy/: agent.py  client_info.py  config.py  context.py  exceptions.py  messaging.py  server.py  server_info.py  utils.py
