[project]
name = "codypy"
version = "1.0.0"
description = "Python wrapper binding for Cody Agent"
authors = [{ name = "PriNova", email = "info@prinova.de" },{ name = "pama1234", email = "pama1234@163.com" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["cody", "cody-agent", "sourcegraph", "ai", "assistant"]
dependencies = [
    "requests",
    "python-dotenv",
    "pydantic",
    "pydantic_core",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "ruff",
]

[project.urls]
documentation = "https://github.com/fabric-of-tetrahedron/codypy/blob/main/README.md"
repository = "https://github.com/fabric-of-tetrahedron/codypy"

[tool.isort]
profile = "black"
